force-app/main/default/objects/Product2/fields/Tech_Image_for_Commerce_Site__c.field-meta.xml
<CustomField>
    <fullName>Tech_Image_for_Commerce_Site__c</fullName>
    <label>Image for Commerce Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>