force-app/main/default/objects/Product2/fields/Tech_Sales_SPIFF_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_SPIFF_Enhancement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to drive a conditional component on the page for SPIFF user story</description>
    <label>SPIFF Enhancement</label>
    <type>Checkbox</type>
</CustomField>