force-app/main/default/objects/Product2/listViews/mdaAllMediaProductsListView.listView-meta.xml
<ListView>
    <fullName>mdaAllMediaProductsListView</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>External_ID__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Digital,None</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
    </filters>
    <label>*1. MoC - All Media Products</label>
</ListView>