force-app/main/default/objects/Product2/listViews/Tech_IDO_Products.listView-meta.xml
<ListView>
    <fullName>Tech_IDO_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_ID__c</field>
        <operation>startsWith</operation>
        <value>Tech</value>
    </filters>
    <label>Tech IDO Products</label>
</ListView>